# hotmart-ai-support

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
examples/: curl_examples.sh
qdrant_config/: production.yaml
qdrant_data/: raft_state.json
qdrant_data/collections/hotmart/: config.json
qdrant_data/collections/hotmart/0/: newest_clocks.json  replica_state.json
qdrant_data/collections/hotmart/0/segments/082a714b-673f-4327-a160-296db4a35e0d/: mutable_id_tracker.mappings  segment.json
qdrant_data/collections/hotmart/0/segments/095912b3-e4ca-4e0a-9bd9-5b1d446010f8/: mutable_id_tracker.mappings  segment.json
qdrant_data/collections/hotmart/0/segments/406e1803-98cb-445c-a882-d67c2d7f3308/: mutable_id_tracker.mappings  segment.json
qdrant_data/collections/hotmart/0/segments/87bac030-7d26-4e6f-9f47-7478dc12c885/: mutable_id_tracker.mappings  segment.json
scripts/: graph_visualization.py  indexer.py
src/: config.py
src/ai_engine/graph/: graph.py
src/ai_engine/graph_visualization/: chat_flow.mmd  graph_visualization.py
src/ai_engine/nodes/: customer_service_node.py  faq_agent_node.py  guardrail_node.py  journey_agent_node.py  router_node.py  tools_node.py
src/ai_engine/states/: state.py
src/ai_engine/tools/: __init__.py  customer_service.py  get_billing_info.py  retriever.py
src/api/: main.py
src/api/models/: chat.py
src/api/routes/: chat.py
src/api/services/: chat_service.py
src/data/: mock_billing_data.json
src/rag/: embeddings.py  qdrant.py
(+33 files in other folders)
